--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             color: #555;
                 text-align: center;
         }
+        .leaflet-container .leaflet-control-attribution {
+            display: none;
+        }
     </style>
 </head>
 <body>
